@@ -1,3 +1,4 @@
+* Support link button on form
 * Add URL for the current export
 * Add option to export listed records
 * Retire App Menu
